<resources>
    <string name="app_name">TripManager</string>
    <string name="trip_name">Trip name</string>
    <string name="destination">Destination</string>
    <string name="city_break">City break</string>
    <string name="sea_side">Sea side</string>
    <string name="mountains">Mountains</string>
    <string name="trip_type">Trip type</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="save">save</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
</resources>
